--- a/contact.html
+++ b/contact.html
@@ -118,8 +118,8 @@
                              aria-describedby="emailHelp" placeholder="Enter your email">
                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                      </div>
-                     <div class="form-check form-check-inline">Gender
-                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                     <div class="form-check form-check-inline">Gender:
+                         &nbsp;&nbsp;&nbsp;&nbsp;
                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
                              value="option1">
                          <label class="form-check-label" for="inlineRadio1">Male</label>
