--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <img src="2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to iCoder</h2>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    <p>Technology News, Development and Trends</p>
                     <button class="btn btn-danger">Technology</button>
                     <button class="btn btn-primary">Web Development</button>
                     <button class="btn btn-success">Tech Info</button>
@@ -189,7 +189,7 @@
                 <img src="4.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to iCoder</h2>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    <p>Technology News, Development and Trends</p>
                     <button class="btn btn-danger">Technology</button>
                     <button class="btn btn-primary">Web Development</button>
                     <button class="btn btn-success">Tech Info</button>
