--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam doloremque quae quia! Tempora aperiam vitae minus facere blanditiis. Neque similique libero cumque voluptates natus nesciunt molestias dolore reiciendis dignissimos porro. Repellendus eligendi ea earum illum tempora? Pariatur possimus amet placeat!</p>
             </div>
             <div class="col-md-5">
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" width="500"
                 height="500" src="about1.jpg" alt="">
             </div>
         </div>
@@ -176,7 +176,7 @@
                 <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem maxime quod consequatur excepturi nihil tempora animi distinctio voluptates! Laboriosam sit ipsum unde est soluta magni recusandae iusto voluptas rem ex.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" width="500"
                 height="500" src="about2.jpg" alt="">
             </div>
         </div>
@@ -187,7 +187,7 @@
                 <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur error cumque maiores possimus. Voluptate, eius fugit. Quam laborum iure tempore perspiciatis doloremque deleniti, quasi earum.</p>
             </div>
             <div class="col-md-5">
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" width="500"
                 height="500" src="about3.jpg" alt="">
             </div>
         </div>
